--- a/gb/22/11/7/n13861006.md
+++ b/gb/22/11/7/n13861006.md
@@ -1,65 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>JIN上《RM》展现幽默与综艺感 池锡辰笑呵呵</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861189-221107074245100707-600x400.jpg" />
 <h6>韩国人气男团防弹少年团（BTS）成员JIN金硕珍（右）与池锡辰（左）因同名结缘，两人于综艺节目《Running Man》合照。（LINE TV提供）
 </h6>
 <hr>
-	<p>【大纪元2022年11月07日讯】（大纪元记者曾薇心综合报导）人气综艺节目《Running Man》6日于韩国播出的最新一集，邀请到防弹少年团（BTS）的大哥JIN<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E7%A1%95%E7%8F%8D.md#1">金硕珍</a>）担任来宾，因名字发音相同而与《Running Man》固定班底<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%A0%E9%94%A1%E8%BE%B0.md#1">池锡辰</a>有交情的他，在节目上展现了幽默与综艺感，获得<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%88%98%E5%9C%A8%E9%94%A1.md#1">刘在锡</a>称赞。</p>
+	<p>【大纪元2022年11月07日讯】（大纪元记者曾薇心综合报导）人气综艺节目《Running Man》6日于韩国播出的最新一集，邀请到防弹少年团（BTS）的大哥JIN（金硕珍）担任来宾，因名字发音相同而与《Running Man》固定班底池锡辰有交情的他，在节目上展现了幽默与综艺感，获得刘在锡称赞。</p>
 <p>今年将满30岁的JIN已届入伍年龄，日前提出取消延迟入伍的他，将依兵役厅程序入伍服兵役，他上月28日推出的首张个人单曲专辑《The Astronaut》是与英国摇滚乐团Coldplay（酷玩乐团）合作。JIN这次上《Running Man》宣传新歌，开心表示：“一想到我上电视了就觉得好神奇，很兴奋！”</p>
-<figure id="attachment_13861201" aria-describedby="caption-attachment-13861201" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861201-221107044032100707.jpg"><img class="size-large wp-image-13861201" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861201-221107044032100707-600x600.jpg" alt="" width="600" b="600" /></a><figcaption id="caption-attachment-13861201" class="wp-caption-text">韩国人气男团防弹少年团（BTS）成员JIN<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E7%A1%95%E7%8F%8D.md#1">金硕珍</a>）参与综艺节目《Running Man》。（LINE TV提供）</figcaption></figure>
-<p>《Running Man》的固定班底<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E9%92%9F%E5%9B%BD.md#1">金钟国</a>过去曾与JIN在美国烤肉店偶遇，同样是安养市出生的两人，首次同框录影。在车上聊天时，金钟国称赞JIN看起来只有十几岁，如果在美国一定会被误认成高中生，让JIN忍不住说：“哥是不是因为我是超级巨星而太捧我？”金钟国笑回：“哇，好久没见到有人自称超级巨星！”JIN则大方说：“我要这样做周围的人才会开心，我要是很谦虚，他们就会觉得很讨厌。”</p>
-<figure id="attachment_13861197" aria-describedby="caption-attachment-13861197" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861197-221107044035100707.jpg"><img class="size-large wp-image-13861197" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861197-221107044035100707-600x329.jpg" alt="" width="600" b="329" /></a><figcaption id="caption-attachment-13861197" class="wp-caption-text">防弹少年团（BTS）成员JIN（金硕珍）参与综艺节目《Running Man》，问<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E9%92%9F%E5%9B%BD.md#1">金钟国</a>是否因为他是超级巨星而太捧他。（LINE TV提供）</figcaption></figure>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%88%98%E5%9C%A8%E9%94%A1.md#1">刘在锡</a>透露每次偶遇JIN，他都会说：“哥，我真的很想上《Running Man》！”而<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%A0%E9%94%A1%E8%BE%B0.md#1">池锡辰</a>也说JIN至少跟他说了五次左右。池锡辰因与本名为金硕珍的JIN的名字发音同为Seok JIN而与JIN结缘。他谈及2018年在节目上被刘在锡鼓吹打电话给JIN，没想到居然吵醒了为了防弹少年团的巡回演唱会而造访荷兰的JIN。对此，JIN开玩笑说：“从那天后，我就把手机调成静音了！”</p>
+<figure id="attachment_13861201" aria-describedby="caption-attachment-13861201" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861201-221107044032100707.jpg"><img decoding="async" class="size-large wp-image-13861201" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861201-221107044032100707-600x600.jpg" alt="" width="600" b="600" /></a><figcaption id="caption-attachment-13861201" class="wp-caption-text">韩国人气男团防弹少年团（BTS）成员JIN（金硕珍）参与综艺节目《Running Man》。（LINE TV提供）</figcaption></figure>
+<p>《Running Man》的固定班底金钟国过去曾与JIN在美国烤肉店偶遇，同样是安养市出生的两人，首次同框录影。在车上聊天时，金钟国称赞JIN看起来只有十几岁，如果在美国一定会被误认成高中生，让JIN忍不住说：“哥是不是因为我是超级巨星而太捧我？”金钟国笑回：“哇，好久没见到有人自称超级巨星！”JIN则大方说：“我要这样做周围的人才会开心，我要是很谦虚，他们就会觉得很讨厌。”</p>
+<figure id="attachment_13861197" aria-describedby="caption-attachment-13861197" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861197-221107044035100707.jpg"><img decoding="async" class="size-large wp-image-13861197" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861197-221107044035100707-600x329.jpg" alt="" width="600" b="329" /></a><figcaption id="caption-attachment-13861197" class="wp-caption-text">防弹少年团（BTS）成员JIN（金硕珍）参与综艺节目《Running Man》，问金钟国是否因为他是超级巨星而太捧他。（LINE TV提供）</figcaption></figure>
+<p>刘在锡透露每次偶遇JIN，他都会说：“哥，我真的很想上《Running Man》！”而池锡辰也说JIN至少跟他说了五次左右。池锡辰因与本名为金硕珍的JIN的名字发音同为Seok JIN而与JIN结缘。他谈及2018年在节目上被刘在锡鼓吹打电话给JIN，没想到居然吵醒了为了防弹少年团的巡回演唱会而造访荷兰的JIN。对此，JIN开玩笑说：“从那天后，我就把手机调成静音了！”</p>
 <p>刘在锡更爆料，池锡辰有一次和JIN私下约喝酒，居然是JIN付钱。JIN马上解释是因为池锡辰较晚到，他们当时已喝了一、两瓶酒，但锡辰哥只喝一杯。JIN打趣地说：“作为超级巨星，不就应该付钱吗？”</p>
-<figure id="attachment_13861196" aria-describedby="caption-attachment-13861196" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861196-221107044037100707.jpg"><img class="size-large wp-image-13861196" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861196-221107044037100707-600x329.jpg" alt="" width="600" b="329" /></a><figcaption id="caption-attachment-13861196" class="wp-caption-text">防弹少年团（BTS）成员JIN（金硕珍）参与综艺节目《Running Man》，与池锡辰穿同款服饰。（LINE TV提供）</figcaption></figure>
+<figure id="attachment_13861196" aria-describedby="caption-attachment-13861196" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861196-221107044037100707.jpg"><img decoding="async" class="size-large wp-image-13861196" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861196-221107044037100707-600x329.jpg" alt="" width="600" b="329" /></a><figcaption id="caption-attachment-13861196" class="wp-caption-text">防弹少年团（BTS）成员JIN（金硕珍）参与综艺节目《Running Man》，与池锡辰穿同款服饰。（LINE TV提供）</figcaption></figure>
 <p>池锡辰与JIN睽违六年一起上节目，池锡辰的造型师为了让池锡辰与JIN穿一样的衣服，不惜花费140万韩元（约台币3.2万元）买下与JIN同款的上衣。而池锡辰透露，这天他穿的裤子和鞋子是由防弹少年团的经纪公司赞助。JIN对池锡辰说，赞助的裤子和鞋子都要送给池锡辰，让池锡辰惊呼：“这很贵呢，要送我吗？”JIN便逗趣地回应“喔？这是贵的吗？那就得还回来啦”，逗得池锡辰呵呵笑。</p>
 <p>而对于JIN上《Running Man》感到不可思议的池锡辰，还在节目中向工作人员说，要从自己的出演费用里拨5万韩元（约新台币1,150元）给JIN，让JIN去吃顿饭、多吃点海鲜汤面。</p>
-<figure id="attachment_13861200" aria-describedby="caption-attachment-13861200" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861200-221107044028100707.jpg"><img class="size-large wp-image-13861200" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861200-221107044028100707-600x368.jpg" alt="" width="600" b="368" /></a><figcaption id="caption-attachment-13861200" class="wp-caption-text">韩国人气男团防弹少年团（BTS）成员JIN（金硕珍）参与综艺节目《Running Man》。（LINE TV提供）</figcaption></figure>
+<figure id="attachment_13861200" aria-describedby="caption-attachment-13861200" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861200-221107044028100707.jpg"><img decoding="async" class="size-large wp-image-13861200" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861200-221107044028100707-600x368.jpg" alt="" width="600" b="368" /></a><figcaption id="caption-attachment-13861200" class="wp-caption-text">韩国人气男团防弹少年团（BTS）成员JIN（金硕珍）参与综艺节目《Running Man》。（LINE TV提供）</figcaption></figure>
 <p>对此，哈哈笑说：“这样哥你这个月的薪水不就剩15万韩元（约台币3,450元）吗？”池锡辰又对JIN笑说：“我给你四分之一的钱呢。”对此，JIN回应“哥的出演费只有20万韩元（约台币4,600元）吗？有点让人心痛耶”，刘在锡便笑说“但他工作感到很快乐，所以没关系”，金钟国也说“他在家玩还不如出来工作呢”，这些话逗得池锡辰忍不住大笑鼓掌。</p>
 <p>这次《Running Man》主题是换乘队长，成员可透过换乘券与敌队交换，因此闹出许多笑料。在第一个韩式足球环节，JIN队伍获胜可吃当地名产海鲜炒码面，就在JIN准备开吃时，池锡辰为了吃到炒码面，竟拿出换乘券要求与JIN交换，JIN马上反击，也拿出换乘券交换，最后如愿吃到炒码面。</p>
-<figure id="attachment_13861198" aria-describedby="caption-attachment-13861198" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861198-221107044023100707.jpg"><img class="size-large wp-image-13861198" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861198-221107044023100707-600x329.jpg" alt="" width="600" b="329" /></a><figcaption id="caption-attachment-13861198" class="wp-caption-text">韩国人气男团防弹少年团（BTS）成员JIN（金硕珍）参与综艺节目《Running Man》，大啖坡州名产海鲜炒码面。（LINE TV提供）</figcaption></figure>
+<figure id="attachment_13861198" aria-describedby="caption-attachment-13861198" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861198-221107044023100707.jpg"><img decoding="async" class="size-large wp-image-13861198" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861198-221107044023100707-600x329.jpg" alt="" width="600" b="329" /></a><figcaption id="caption-attachment-13861198" class="wp-caption-text">韩国人气男团防弹少年团（BTS）成员JIN（金硕珍）参与综艺节目《Running Man》，大啖坡州名产海鲜炒码面。（LINE TV提供）</figcaption></figure>
 <p>JIN对池锡辰说：“大哥抱歉，我也是吃饭才能生存下去啊！”立刻被调皮鬼元祖刘在锡夸奖：“你也很会开玩笑耶！”被节目认证为调皮鬼的JIN笑回：“我在队内就是负责这样的角色。”</p>
 <p>而在第二个游戏环节“不是耶，不是耶，起火了”则是要反驳敌队的提问。JIN被问到“喜欢队长RM（金南俊）吗？”JIN因为游戏规则不得不故意说反话，便机智地说：“不是耶，我应该很讨厌RM，为什么他那么聪明，唉唷，有够讨厌。”机智的反应让众人拍手叫好。</p>
-<figure id="attachment_13861199" aria-describedby="caption-attachment-13861199" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861199-221107044021100707.jpg"><img class="size-large wp-image-13861199" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861199-221107044021100707-600x329.jpg" alt="" width="600" b="329" /></a><figcaption id="caption-attachment-13861199" class="wp-caption-text">JIN金硕珍上《Running Man》被问到是否喜欢队长RM，故意说反话“为什么他这么聪明，真讨厌”。（LINE TV提供）</figcaption></figure>
-<p>而<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%8B%E6%99%BA%E5%AD%9D.md#1">宋智孝</a>被刘在锡问到“智孝不喜欢钟国吧”时，智孝除了说“不是耶，我真的真的很爱钟国”，语毕后还走向钟国，朝金钟国的头发亲了一下，让金钟国和固定班底都吓了一跳。</p>
-<p>池锡辰则被JIN问“锡辰哥想继续留在《Running Man》吧？”不得不说反话的他只好当众说“哈哈哈哈，不是耶，下礼拜就是（我的）最后一集了，各位再见了（？）”逗笑众人，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%8B%E6%99%BA%E5%AD%9D.md#1">宋智孝</a>也贴心地赶紧缓颊说：“不是真的、不是真的。”</p>
+<figure id="attachment_13861199" aria-describedby="caption-attachment-13861199" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13861199-221107044021100707.jpg"><img decoding="async" class="size-large wp-image-13861199" title="" src="https://i.epochtimes.com/assets/uploads/2022/11/id13861199-221107044021100707-600x329.jpg" alt="" width="600" b="329" /></a><figcaption id="caption-attachment-13861199" class="wp-caption-text">JIN金硕珍上《Running Man》被问到是否喜欢队长RM，故意说反话“为什么他这么聪明，真讨厌”。（LINE TV提供）</figcaption></figure>
+<p>而宋智孝被刘在锡问到“智孝不喜欢钟国吧”时，智孝除了说“不是耶，我真的真的很爱钟国”，语毕后还走向钟国，朝金钟国的头发亲了一下，让金钟国和固定班底都吓了一跳。</p>
+<p>池锡辰则被JIN问“锡辰哥想继续留在《Running Man》吧？”不得不说反话的他只好当众说“哈哈哈哈，不是耶，下礼拜就是（我的）最后一集了，各位再见了（？）”逗笑众人，宋智孝也贴心地赶紧缓颊说：“不是真的、不是真的。”</p>
 <p>韩国人气综艺节目《Running Man》由LINE TV每周一跟随韩国进度在台湾播出。</p>
 <p>责任编辑：辛幼安</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/17/n13847025.md#1">BTS以JIN为首陆续入伍 盼2025年重启团体活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/21/n13850085.md#1">JIN谈BTS维持团队关键要素：为了彼此而让步</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/28/n13854587.md#1">BTS JIN以单曲向粉丝诉感谢 盼听众得到慰藉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/29/n13855208.md#1">JIN首张单曲首日热销70万张 97区iTunes夺冠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：亚马逊超高清智能电视Fire TV系列 节日优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/17/n13847025.md#1">BTS以JIN为首陆续入伍 盼2025年重启团体活动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/21/n13850085.md#1">JIN谈BTS维持团队关键要素：为了彼此而让步</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/28/n13854587.md#1">BTS JIN以单曲向粉丝诉感谢 盼听众得到慰藉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/29/n13855208.md#1">JIN首张单曲首日热销70万张 97区iTunes夺冠</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/30/n10884257.md#1" target="_blank">美国会CECC吁川习会关注法轮功受迫害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/13/n10138788.md#1" target="_blank">中共进入联合国与尼克松访华内幕（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/1/n10824187.md#1" target="_blank">一本书让70岁的她成为有福人</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14131486.md#1">郑和七下西洋成功完成使命 背后显现神秘力量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138259.md#1">【中国禁闻】人脸识别专家汤晓鸥死因成谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137659.md#1">【全球新闻】大陆医生：中共病毒感染爆发式增长</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137901.md#1">【环球直击】中国就业难 求职者露宿街头遭驱赶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137893.md#1">太空站种的番茄失踪近一年变啥样 照片曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137607.md#1">碧桂园陷入债务危机 杨惠妍开会“面如死灰”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137649.md#1">周海媚去世前曾讲述一件诡异事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137438.md#1">自曝女儿个性像霍建华 林心如不愿她进演艺圈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137475.md#1">获封“救视主” 南宫珉获年度最佳韩剧演员冠军</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138312.md#1">疑因杨幂赵丽颖争演女二号 陈可辛发排序声明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138295.md#1">居台3年将首次投票选总统 杜汶泽吁守护国家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137700.md#1">土库曼斯坦“地狱之门” 烈火燃烧逾半世纪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135905.md#1">萝卜性寒 为何寒冬吃更好？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104521.md#1">没吃肥肉胆固醇还是高？营养师教3招降胆固醇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289679.md#1">2024年美国生活最昂贵和最便宜的十个州</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285229.md#1">研究：咖啡有助于抵消与年龄有关的肌肉流失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281710.md#1">吸食大麻健康危害大 七招让你远离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289225.md#1">观赏奥运要小心 看错比赛肚子恐怕会胖一圈</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/7/n13861006.htm">JIN上《RM》展现幽默与综艺感 池锡辰笑呵呵</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/11/7/n13861006.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/11/7/n13861006.htm">JIN上《RM》展现幽默与综艺感 池锡辰笑呵呵</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/11/7/n13861006.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
